tests/baselines/reference/moduleAugmentationImportsAndExports3.errors.txt
f3.ts(11,5): error TS2667: Imports are not permitted in module augmentations. Consider moving them to the enclosing external module.
f3.ts(11,21): error TS2307: Cannot find module './f2' or its corresponding type declarations.


==== f1.ts (0 errors) ====
    export class A {}
    
==== f2.ts (0 errors) ====
    export class B {
        n: number;
    }
    
==== f3.ts (2 errors) ====
    import {A} from "./f1";
    
    A.prototype.foo = function () { return undefined; }
    
    namespace N {
        export interface Ifc { a }
        export interface Cls { a }
    }
    
    declare module "./f1" {
        import {B} from "./f2";
        ~~~~~~
!!! error TS2667: Imports are not permitted in module augmentations. Consider moving them to the enclosing external module.
                        ~~~~~~
!!! error TS2307: Cannot find module './f2' or its corresponding type declarations.
        import I = N.Ifc;
        import C = N.Cls;
        interface A {
            foo(): B;
            bar(): I;
            baz(): C;
        }
    }
    
==== f4.ts (0 errors) ====
    import {A} from "./f1";
    import "./f3";
    
    let a: A;
    let b = a.foo().n;